@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 9a59e40e13c6a8b6a8a3547949fac83c78ab8199 ChangeLog
+SHA1 69d4ea9b150cdb4b55ae73ad3975879aa4d62a73 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1d292a0e6dba2ce264985cc3004ff0dc9b298bfc MANIFEST
-SHA1 f40a6bf0d5db0848771927b9923045e6c0a4396f META.yml
-SHA1 c6c13bcb8203ad68a758b2bd3107735fb9b4f7e1 Makefile.PL
+SHA1 b67ac12951de7d98a65bbce16b403210f33995a1 META.yml
+SHA1 f4d82505aa86cfeacc7263fb15159af7c63be076 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 757f8405065fb6398dd1a6c20f29ba971375537f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 e9b682222b2634c36de314e717bdc8dc9e313eaf lib/Net/FullAuto.pm
+SHA1 05f4ff4f56e83c7351210eafd93582cc2c37600b lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,17 +48,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 5e5bafe478bc044dab61664222ccce8197617935 lib/Net/FullAuto/FA_Core.pm
+SHA1 0def838230876164afd21e3979a37b1043f103ba lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSoPppAAoJEBa/9Pad787EyZAIAN1JrQ4fWB91VCEEgXPQXe+X
-e6rEG+kK7fa0rUe5YyBhvHuXjMu3piRd6+S/ej/Z97jIHcQigALVcJa30zHgt/w4
-rb1R5/Ojim46t/1R08Q8P5KxEoZVzTkK4q6pIf0PFL31M6pk9PSK6nQ4CV+lCdD5
-+ViOq7A0lUtvmTuGeX/3tfIc8OectDpkq71RLtb/f2EQuQkHOpqjwXXfv7dq5o3z
-T1VbJj6FBbm3s5gIdt6JJ2LVs0Ag9IZTbOz7NJgDC3HDys0e9G6o3R1cL+GSpcrY
-lGSghl/J/F+2D0tEQ15EmiFBzEHHZlDMZNjPawklSFjBTrq3x4H41P2Gb6zgKUY=
-=Zdxu
+iQEcBAEBAgAGBQJSp13wAAoJEBa/9Pad787EDHwH/AnvUTdoL9hzl9xto2yW8Rqw
+RemqB94RvB/MkwBnIKCyC3zT6SmOvrasV1kG80tJ8ZqTYDseFB/ZVUQ072Q70wfq
+AwDcfxRi4vjmlx3HTF+ge6bXgSDt4Nrc5njY+/UjweTpIw1A3MHi5WkpUsUqeSV5
+ZCU9Mwf5+txVP70qyGXw/2Um9zGMJWjqARKkN9yKInYkwCeV8PcShlH4ad2H1kpq
+4Dt/spC/BoFz0o5HeJRWPqkvsOeiXI2c8vqPkK3pvFyyG91WIc/DxAje2Qu83ux+
+mPxiW5SjXe5SN+1lRtUq4xbv0+Wn1kV2+7jTvxqdrsNUuJ0/C/d9L3hY00YVBME=
+=Et15
 -----END PGP SIGNATURE-----
