@@ -19,6 +19,17 @@
 ################################################################
 
 
+2013-12-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999967 released.
+
+        * More Development on Import/Export Menu Item.
+
+        * Implemented Return to Admin from Admin sub menus.
+
+        * New version of Term::Menus paired with this release.
+
+
 2013-12-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999966 released.
